sass variables  border FOOTER CORRECTED DD

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           
               <div class="backgroundImage">
                   <div class="backgroundText">
-                      DETAILS ARE NOT DATAILS.<br>THEY MAKE THE DESIGN.
+                      DETAILS ARE NOT DETAILS.<br>THEY MAKE THE DESIGN.
                   </div>
           
               </div>
